@@ -3,7 +3,13 @@ body {
 	padding: 0;
 	color: black;
 	background: white;
-	font-family: sans-serif;
+	font-family: Verdana,Helvetica,Arial,sans-serif;
+	font-size: small;
+}
+
+code,pre {
+	font-family: "Courier New",Courier,monospace;
+	font-size: 1em;
 }
 
 #head {
@@ -36,11 +42,6 @@ body {
 
 #content h2, p {
 	margin-top: 0;
-}
-
-h1, h2, h3, h4 {
-	font-family: serif;
-	font-weight: bold;
 }
 
 p.important {
